--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,6 +1,7 @@
 .each-item {
     cursor: pointer;
-    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.3); */
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
   
   .each-item .img-wrapper img {
